# base_api

./: .env.compose  .env.local  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  environment.dist.yml  main.py  pyproject.toml  requirements.txt  update_conda_env.sh
app/: config.py  crud.py  default_connection.py  manager.py  models.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 25bec031d3b2_initial_migration.py
tests/: test_base.py
