[tool.poetry]
name = "app"
version = "0.1.0"
description = "Sample FastAPI, SQLA, PostgreSQL backend API template."
authors = ["K. Turaev <kturaevv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Faker = "8.8.1"
fastapi = "^0.87.0"
asyncpg = "^0.26.0"
psycopg2 = "^2.9.3"
pydantic = "^1.10.2"
uvicorn = "^0.19.0"
sqlalchemy = "^1.4.39"
starlette = "^0.21.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.5"
pytest = "^7.1.2"
httpx = "^0.23.0"

[tool.pytest.ini_options]
python_files = "test_*.py"
pythonpath = "."
testpaths = "tests"
filterwarnings = "error"
addopts = '''
    -v
    --tb=short
    --disable-pytest-warnings
    --strict-markers
    --tb=short
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"